# cookiecutter-python-uv

./: NOTICE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.top_level_directory }}/: .bumpversion.cfg  .gitignore  .verchew.ini  Makefile  NOTICE  README.md  env  justfile  pyproject.toml  pytest.ini
{{ cookiecutter.top_level_directory }}/src/{{ cookiecutter.package_name }}/: cli.py
{{ cookiecutter.top_level_directory }}/tests/: test_example.py
